@@ -4,7 +4,7 @@ in this distribution are provided AS IS with NO WARRANTY OF ANY KIND,
 INCLUDING THE WARRANTY OF DESIGN, MERCHANTABILITY, AND FITNESS FOR
 A PARTICULAR PURPOSE.
 
-Nagios and the Nagios logo are registered trademarks of Ethan Galstad.
+Nagios and the Nagios logo are registered trademarks of Nagios Enterprises.
 All other trademarks, servicemarks, registered trademarks, and 
 registered servicemarks are the property of their respective owner(s).
 
