@@ -4,12 +4,12 @@
 DH *get_dh512()
 	{
 	static unsigned char dh512_p[]={
-		0xB4,0xC4,0xCB,0xF8,0x94,0xEE,0x4D,0x73,0x23,0xF9,0xB0,0xC4,
-		0x07,0xB5,0x69,0xC8,0x7B,0x85,0x10,0xA6,0xB6,0x56,0x2B,0x52,
-		0xDB,0x7C,0xC6,0x39,0x34,0x1B,0xAB,0x68,0xB2,0x05,0x8F,0x87,
-		0x0D,0x53,0xD1,0x32,0x85,0xDC,0xEE,0xA4,0x92,0xBF,0x1B,0x40,
-		0x99,0x76,0xF5,0x28,0xA4,0xAC,0x35,0xD6,0x3F,0x7C,0x23,0xE0,
-		0xBC,0xE9,0x34,0x03,
+		0x95,0xC8,0x9C,0x13,0xC7,0x80,0x1E,0x4E,0x5D,0x18,0x4F,0x0D,
+		0x56,0x7A,0xCB,0xFE,0xE3,0xFF,0x10,0xE4,0x7C,0xF7,0x7E,0x7F,
+		0xF7,0x14,0x48,0x21,0x74,0x34,0xF6,0x80,0xF1,0xAF,0xD7,0x88,
+		0xDD,0xFF,0xB2,0x87,0x95,0xF6,0x10,0x06,0xD6,0x8F,0x11,0xD8,
+		0xEA,0xAC,0x6F,0x15,0x73,0xC3,0xC0,0x67,0xB0,0x4F,0xC1,0xAD,
+		0xBD,0x21,0xE7,0xE3,
 		};
 	static unsigned char dh512_g[]={
 		0x02,
